# NLMYTGen

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  _bat_run.txt  prompt-resume.md  pyproject.toml  requirements-dev.txt  start-gui.bat  start-gui.ps1
.claude/: CLAUDE.md  settings.json
docs/: ARCHITECTURE.md  AUTOMATION_BOUNDARY.md  B11-manual-checkpoints.md  B11-workflow-proof-2026-04-06.md  C07-visual-pattern-operator-intent.md  EVIDENCE_RICHNESS_SCORE_SPEC.md  FEATURE_REGISTRY.md  FUTURE_DEVELOPMENT_ROADMAP.md  GUI_MINIMUM_PATH.md  INTERACTION_NOTES.md  INVARIANTS.md  MATERIAL_SOURCING_RULES.md  MIGRATION_LEDGER.md  MOTION_PRESET_LIBRARY_SPEC.md  MOTION_PRODUCTION_PIPELINE.md  MOTION_RECIPE_LOOP_TIMING.md  NAV.md  OPERATOR_PARALLEL_WORK_RUNBOOK.md  OPERATOR_WORKFLOW.md  PACKAGING_ORCHESTRATOR_SPEC.md  PIPELINE_SPEC.md  PRODUCTION_IR_CAPABILITY_MATRIX.md  PRODUCTION_IR_SPEC.md  PROJECT_CHARTER.md  REPO_LOCAL_RULES.md  S1-script-refinement-prompt.md  S5-motion-brief-prompt.md  S6-background-animation-next-step-plan-prep.md  S6-background-animation-research-return-prompt.md  S6-production-memo-prompt.md  S8-thumbnail-copy-prompt.md  SCRIPT_QUALITY_DIAGNOSTICS_SPEC.md  SKIT_GROUP_TEMPLATE_SPEC.md  STEP3_TACHIE_RENDERING_PIPELINE.md  STEP3_YMM4_TEMPLATE_CHECKLIST.md  THUMBNAIL_ONE_SHEET_WORKFLOW.md  THUMBNAIL_STRATEGY_SPEC.md  TIMELINE_EFFECT_CAPABILITY_ATLAS.md  USER_REQUEST_LEDGER.md  VISUAL_DENSITY_SCORE_SPEC.md  (+11 more)
gui/: index.html  main.js  package.json  preload.js  renderer.js  style.css
prompts/: prompt-resume-after-face-subsystem.md  prompt-resume-next-phase.md  (+1 more)
(+543 files in other folders)
